--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,3 @@
 GROQ_API_KEY=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
-REDIS_URL=rediss://default:ATjKAAIjcDExNDU2YjVjMjgwNjg0YzVkODE0NTE0ZDUyNGRiNTk3MXAxMA@allowing-badger-14538.upstash.io:6379
+REDIS_URL=rediss://default:AcyLAAIjcDE5NzJmZjI3ZjdjMTg0OWYwOWFhZDM2MWFhYzY0M2FjNXAxMA@big-dory-52363.upstash.io:6379
 MONGODB_URI=mongodb+srv://prvnkkr:pravin123@cluster0.opm9mue.mongodb.net/employees_db?retryWrites=true&w=majority&appName=Cluster0
